@@ -702,11 +702,12 @@ static void parse_key(char key, uint32 keysym)
             return;
         }
 
+        /* Some spells (dimension door) need a valid count value */
+        cpl.count = gtk_spin_button_get_value_as_int (GTK_SPIN_BUTTON(spinbutton_count));
+
         if (first_match->direction>=0) {
             if (cpl.fire_on) {
                 snprintf(buf, sizeof(buf), "fire %s", first_match->command);
-                /* Some spells (dimension door) need a valid count value */
-                cpl.count = gtk_spin_button_get_value_as_int (GTK_SPIN_BUTTON(spinbutton_count));
                 fire_dir(first_match->direction);
             }
             else if (cpl.run_on) {
@@ -1693,6 +1694,9 @@ on_entry_commands_activate             (GtkEntry        *entry,
 
     } else {
         cpl.input_state = Playing;
+        /* Some spells (dimension door) need a valid count value */
+        cpl.count = gtk_spin_button_get_value_as_int (GTK_SPIN_BUTTON(spinbutton_count));
+
         /* No reason to do anything for a null string */
         if (entry_text[0] != 0) {
             strncpy(history[cur_history_position], entry_text, MAX_COMMAND_LEN);
