@@ -1,6 +1,10 @@
 "$Id$"
 Top of SVN tree:
 ------------------------------------------------------------------------------
+gtk-v2/src/keys.c: Always extract spinbutton count and send it to server
+  when doing commands - fixes 'invoke dimension door' spacing issue.
+MSW 2009-07-13
+
 gtk-v2/glade/sixforty.glade:  This started out as a rework for the new stat.c
   and pickup.c code, but became a general improvement effort.  The layout has
   some issues in that saving windows position seems unreliable - possibly due
